--- a/src/components/atoms/SingleTab/SingleTab.module.scss
+++ b/src/components/atoms/SingleTab/SingleTab.module.scss
@@ -1,10 +1,17 @@
 @import "../../../styles/_tokens.scss";
-@import "../../../styles/_mixins.scss";
 
 .tab {
-  @include flex-start;
-  @include interactive;
-  @include focus-visible;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  // Interactive (was @include interactive)
+  cursor: pointer;
+  user-select: none;
+  transition: all var(--motion-duration-normal) var(--motion-easing-ease-out);
+  &:focus-visible {
+    outline: 2px solid var(--color-border-focus);
+    outline-offset: 2px;
+  }
 
   position: relative;
   padding: var(--spacing-md) var(--spacing-lg);
@@ -34,7 +41,9 @@
   .leftIcon,
   .rightIcon {
     flex-shrink: 0;
-    @include flex-center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .leftIcon {
@@ -185,14 +194,24 @@
   // State styles
   &.state-hover {
     &:not(:disabled) {
-      @include interactive-hover;
+      // Interactive hover (was @include interactive-hover)
+      cursor: pointer;
+      user-select: none;
+      transition: all var(--motion-duration-normal)
+        var(--motion-easing-ease-out);
+
+      &:hover:not(:disabled) {
+        transform: var(--transform-hover);
+        box-shadow: var(--shadow-hover);
+      }
     }
   }
 
   &.state-disabled {
-    @include disabled;
+    // Disabled state (was @include disabled)
+    opacity: var(--opacity-50);
     cursor: not-allowed;
-    opacity: 0.5;
+    pointer-events: none;
   }
 
   // Disabled state
