Update styles and theme system, remove deprecated brand management files

--- a/src/components/atoms/SimpleTopNav/SimpleTopNav.module.scss
+++ b/src/components/atoms/SimpleTopNav/SimpleTopNav.module.scss
@@ -253,3 +253,9 @@
 .navItemText {
   display: inline-block;
 }
+
+.themeSwitcherContainer {
+  display: flex;
+  align-items: center;
+  margin-left: var(--spacing-sm);
+}
